[project]
name = "backupmaster"
version = "0.5.1"
description = ""
authors = [{ name = "Quinten Roets", email = "qdr2104@columbia.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "lxml",
    "PyYAML",
    "quinten-cli",
    "rich",
    "superpathlib",
    "tqdm",
    "xattr",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "bump2version"
]
test = [
    "dirhash",
    "hypothesis",
    "pytest"
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/backup"


[project.scripts]
backup = "backup:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
